fix: z-index on clicks module

--- a/src/styles.css
+++ b/src/styles.css
@@ -665,6 +665,7 @@ h3 {
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
+	z-index: 995;
 }
 
 .d-result-text {
